Remove redundant new HashSet() calls